--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,8 @@ DB_NAME=your_database_name
 DB_USER=your_username
 DB_PASSWORD=your_password
 
-# Google Vertex AI Configuration
-GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account.json
-GOOGLE_CLOUD_PROJECT=your-project-id
-
-# Pinecone Configuration
-PINECONE_API_KEY=your_pinecone_api_key
-PINECONE_INDEX_NAME=your_index_name
-PINECONE_QUERY_INDEX_NAME=your_query_index_name
+# Google Gemini AI Configuration
+GEMINI_API_KEY=your_gemini_api_key
 
 # Server Configuration
 PORT=3001
