--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@langchain/google-vertexai": "^0.2.16",
     "@pinecone-database/pinecone": "^6.1.2",
     "cors": "^2.8.5",
